// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render 1`] = `
<div
  className="kuiVerticalRhythmLarge"
>
  <KuiBar
    className="kuiVerticalRhythm"
  >
    <KuiBarSection>
      <div
        className="kuiTitle"
      >
        title1
      </div>
    </KuiBarSection>
    <KuiBarSection />
  </KuiBar>
  <EuiTabs
    className="kuiVerticalRhythm"
    expand={false}
    size="m"
  >
    <EuiTab
      disabled={false}
      isSelected={true}
      key="0"
      onClick={[Function]}
    >
      OSX
    </EuiTab>
    <EuiTab
      disabled={false}
      isSelected={false}
      key="1"
      onClick={[Function]}
    >
      Windows
    </EuiTab>
  </EuiTabs>
  <EuiSpacer
    size="m"
  />
  <EuiSteps
    firstStepNumber={1}
    headingElement="p"
    steps={
      Array [
        Object {
          "children": <Instruction
            commands={
              Array [
                "do stuff in command line",
              ]
            }
            paramValues={Object {}}
            replaceTemplateStrings={[Function]}
            textPost={undefined}
            textPre={undefined}
          />,
          "key": 0,
          "title": "step 1",
        },
        Object {
          "children": <Instruction
            commands={
              Array [
                "do more stuff in command line",
              ]
            }
            paramValues={Object {}}
            replaceTemplateStrings={[Function]}
            textPost={undefined}
            textPre={undefined}
          />,
          "key": 1,
          "title": "step 2",
        },
      ]
    }
  />
</div>
`;

exports[`statusCheckState checking status 1`] = `
<div
  className="kuiVerticalRhythmLarge"
>
  <KuiBar
    className="kuiVerticalRhythm"
  >
    <KuiBarSection>
      <div
        className="kuiTitle"
      >
        title1
      </div>
    </KuiBarSection>
    <KuiBarSection />
  </KuiBar>
  <EuiTabs
    className="kuiVerticalRhythm"
    expand={false}
    size="m"
  >
    <EuiTab
      disabled={false}
      isSelected={true}
      key="0"
      onClick={[Function]}
    >
      OSX
    </EuiTab>
    <EuiTab
      disabled={false}
      isSelected={false}
      key="1"
      onClick={[Function]}
    >
      Windows
    </EuiTab>
  </EuiTabs>
  <EuiSpacer
    size="m"
  />
  <EuiSteps
    firstStepNumber={1}
    headingElement="p"
    steps={
      Array [
        Object {
          "children": <Instruction
            commands={
              Array [
                "do stuff in command line",
              ]
            }
            paramValues={Object {}}
            replaceTemplateStrings={[Function]}
            textPost={undefined}
            textPre={undefined}
          />,
          "key": 0,
          "title": "step 1",
        },
        Object {
          "children": <Instruction
            commands={
              Array [
                "do more stuff in command line",
              ]
            }
            paramValues={Object {}}
            replaceTemplateStrings={[Function]}
            textPost={undefined}
            textPre={undefined}
          />,
          "key": 1,
          "title": "step 2",
        },
        Object {
          "children": <UNDEFINED>
            <EuiFlexGroup
              alignItems="center"
              component="div"
              direction="row"
              gutterSize="l"
              justifyContent="spaceBetween"
              responsive={true}
              wrap={false}
            >
              <EuiFlexItem
                component="div"
                grow={true}
              >
                <EuiText
                  grow={true}
                >
                  <p>
                    custom status check description
                  </p>
                </EuiText>
              </EuiFlexItem>
              <EuiFlexItem
                component="div"
                grow={false}
              >
                <EuiButton
                  color="primary"
                  fill={false}
                  iconSide="left"
                  isLoading={true}
                  onClick={[Function]}
                  type="button"
                >
                  custom btn label
                </EuiButton>
              </EuiFlexItem>
            </EuiFlexGroup>
            <EuiSpacer
              size="s"
            />
          </UNDEFINED>,
          "key": "checkStatusStep",
          "status": "incomplete",
          "title": "custom title",
        },
      ]
    }
  />
</div>
`;

exports[`statusCheckState failed status check - error 1`] = `
<div
  className="kuiVerticalRhythmLarge"
>
  <KuiBar
    className="kuiVerticalRhythm"
  >
    <KuiBarSection>
      <div
        className="kuiTitle"
      >
        title1
      </div>
    </KuiBarSection>
    <KuiBarSection />
  </KuiBar>
  <EuiTabs
    className="kuiVerticalRhythm"
    expand={false}
    size="m"
  >
    <EuiTab
      disabled={false}
      isSelected={true}
      key="0"
      onClick={[Function]}
    >
      OSX
    </EuiTab>
    <EuiTab
      disabled={false}
      isSelected={false}
      key="1"
      onClick={[Function]}
    >
      Windows
    </EuiTab>
  </EuiTabs>
  <EuiSpacer
    size="m"
  />
  <EuiSteps
    firstStepNumber={1}
    headingElement="p"
    steps={
      Array [
        Object {
          "children": <Instruction
            commands={
              Array [
                "do stuff in command line",
              ]
            }
            paramValues={Object {}}
            replaceTemplateStrings={[Function]}
            textPost={undefined}
            textPre={undefined}
          />,
          "key": 0,
          "title": "step 1",
        },
        Object {
          "children": <Instruction
            commands={
              Array [
                "do more stuff in command line",
              ]
            }
            paramValues={Object {}}
            replaceTemplateStrings={[Function]}
            textPost={undefined}
            textPre={undefined}
          />,
          "key": 1,
          "title": "step 2",
        },
        Object {
          "children": <UNDEFINED>
            <EuiFlexGroup
              alignItems="center"
              component="div"
              direction="row"
              gutterSize="l"
              justifyContent="spaceBetween"
              responsive={true}
              wrap={false}
            >
              <EuiFlexItem
                component="div"
                grow={true}
              >
                <EuiText
                  grow={true}
                >
                  <p>
                    custom status check description
                  </p>
                </EuiText>
              </EuiFlexItem>
              <EuiFlexItem
                component="div"
                grow={false}
              >
                <EuiButton
                  color="primary"
                  fill={false}
                  iconSide="left"
                  isLoading={false}
                  onClick={[Function]}
                  type="button"
                >
                  custom btn label
                </EuiButton>
              </EuiFlexItem>
            </EuiFlexGroup>
            <EuiSpacer
              size="s"
            />
            <EuiCallOut
              color="warning"
              size="m"
              title="custom error msg"
            />
          </UNDEFINED>,
          "key": "checkStatusStep",
          "status": "complete",
          "title": "custom title",
        },
      ]
    }
  />
</div>
`;

exports[`statusCheckState failed status check - no data 1`] = `
<div
  className="kuiVerticalRhythmLarge"
>
  <KuiBar
    className="kuiVerticalRhythm"
  >
    <KuiBarSection>
      <div
        className="kuiTitle"
      >
        title1
      </div>
    </KuiBarSection>
    <KuiBarSection />
  </KuiBar>
  <EuiTabs
    className="kuiVerticalRhythm"
    expand={false}
    size="m"
  >
    <EuiTab
      disabled={false}
      isSelected={true}
      key="0"
      onClick={[Function]}
    >
      OSX
    </EuiTab>
    <EuiTab
      disabled={false}
      isSelected={false}
      key="1"
      onClick={[Function]}
    >
      Windows
    </EuiTab>
  </EuiTabs>
  <EuiSpacer
    size="m"
  />
  <EuiSteps
    firstStepNumber={1}
    headingElement="p"
    steps={
      Array [
        Object {
          "children": <Instruction
            commands={
              Array [
                "do stuff in command line",
              ]
            }
            paramValues={Object {}}
            replaceTemplateStrings={[Function]}
            textPost={undefined}
            textPre={undefined}
          />,
          "key": 0,
          "title": "step 1",
        },
        Object {
          "children": <Instruction
            commands={
              Array [
                "do more stuff in command line",
              ]
            }
            paramValues={Object {}}
            replaceTemplateStrings={[Function]}
            textPost={undefined}
            textPre={undefined}
          />,
          "key": 1,
          "title": "step 2",
        },
        Object {
          "children": <UNDEFINED>
            <EuiFlexGroup
              alignItems="center"
              component="div"
              direction="row"
              gutterSize="l"
              justifyContent="spaceBetween"
              responsive={true}
              wrap={false}
            >
              <EuiFlexItem
                component="div"
                grow={true}
              >
                <EuiText
                  grow={true}
                >
                  <p>
                    custom status check description
                  </p>
                </EuiText>
              </EuiFlexItem>
              <EuiFlexItem
                component="div"
                grow={false}
              >
                <EuiButton
                  color="primary"
                  fill={false}
                  iconSide="left"
                  isLoading={false}
                  onClick={[Function]}
                  type="button"
                >
                  custom btn label
                </EuiButton>
              </EuiFlexItem>
            </EuiFlexGroup>
            <EuiSpacer
              size="s"
            />
            <EuiCallOut
              color="warning"
              size="m"
              title="custom error msg"
            />
          </UNDEFINED>,
          "key": "checkStatusStep",
          "status": "complete",
          "title": "custom title",
        },
      ]
    }
  />
</div>
`;

exports[`statusCheckState initial state - no check has been attempted 1`] = `
<div
  className="kuiVerticalRhythmLarge"
>
  <KuiBar
    className="kuiVerticalRhythm"
  >
    <KuiBarSection>
      <div
        className="kuiTitle"
      >
        title1
      </div>
    </KuiBarSection>
    <KuiBarSection />
  </KuiBar>
  <EuiTabs
    className="kuiVerticalRhythm"
    expand={false}
    size="m"
  >
    <EuiTab
      disabled={false}
      isSelected={true}
      key="0"
      onClick={[Function]}
    >
      OSX
    </EuiTab>
    <EuiTab
      disabled={false}
      isSelected={false}
      key="1"
      onClick={[Function]}
    >
      Windows
    </EuiTab>
  </EuiTabs>
  <EuiSpacer
    size="m"
  />
  <EuiSteps
    firstStepNumber={1}
    headingElement="p"
    steps={
      Array [
        Object {
          "children": <Instruction
            commands={
              Array [
                "do stuff in command line",
              ]
            }
            paramValues={Object {}}
            replaceTemplateStrings={[Function]}
            textPost={undefined}
            textPre={undefined}
          />,
          "key": 0,
          "title": "step 1",
        },
        Object {
          "children": <Instruction
            commands={
              Array [
                "do more stuff in command line",
              ]
            }
            paramValues={Object {}}
            replaceTemplateStrings={[Function]}
            textPost={undefined}
            textPre={undefined}
          />,
          "key": 1,
          "title": "step 2",
        },
        Object {
          "children": <UNDEFINED>
            <EuiFlexGroup
              alignItems="center"
              component="div"
              direction="row"
              gutterSize="l"
              justifyContent="spaceBetween"
              responsive={true}
              wrap={false}
            >
              <EuiFlexItem
                component="div"
                grow={true}
              >
                <EuiText
                  grow={true}
                >
                  <p>
                    custom status check description
                  </p>
                </EuiText>
              </EuiFlexItem>
              <EuiFlexItem
                component="div"
                grow={false}
              >
                <EuiButton
                  color="primary"
                  fill={false}
                  iconSide="left"
                  isLoading={true}
                  onClick={[Function]}
                  type="button"
                >
                  custom btn label
                </EuiButton>
              </EuiFlexItem>
            </EuiFlexGroup>
            <EuiSpacer
              size="s"
            />
          </UNDEFINED>,
          "key": "checkStatusStep",
          "status": "incomplete",
          "title": "custom title",
        },
      ]
    }
  />
</div>
`;

exports[`statusCheckState successful status check 1`] = `
<div
  className="kuiVerticalRhythmLarge"
>
  <KuiBar
    className="kuiVerticalRhythm"
  >
    <KuiBarSection>
      <div
        className="kuiTitle"
      >
        title1
      </div>
    </KuiBarSection>
    <KuiBarSection />
  </KuiBar>
  <EuiTabs
    className="kuiVerticalRhythm"
    expand={false}
    size="m"
  >
    <EuiTab
      disabled={false}
      isSelected={true}
      key="0"
      onClick={[Function]}
    >
      OSX
    </EuiTab>
    <EuiTab
      disabled={false}
      isSelected={false}
      key="1"
      onClick={[Function]}
    >
      Windows
    </EuiTab>
  </EuiTabs>
  <EuiSpacer
    size="m"
  />
  <EuiSteps
    firstStepNumber={1}
    headingElement="p"
    steps={
      Array [
        Object {
          "children": <Instruction
            commands={
              Array [
                "do stuff in command line",
              ]
            }
            paramValues={Object {}}
            replaceTemplateStrings={[Function]}
            textPost={undefined}
            textPre={undefined}
          />,
          "key": 0,
          "title": "step 1",
        },
        Object {
          "children": <Instruction
            commands={
              Array [
                "do more stuff in command line",
              ]
            }
            paramValues={Object {}}
            replaceTemplateStrings={[Function]}
            textPost={undefined}
            textPre={undefined}
          />,
          "key": 1,
          "title": "step 2",
        },
        Object {
          "children": <UNDEFINED>
            <EuiFlexGroup
              alignItems="center"
              component="div"
              direction="row"
              gutterSize="l"
              justifyContent="spaceBetween"
              responsive={true}
              wrap={false}
            >
              <EuiFlexItem
                component="div"
                grow={true}
              >
                <EuiText
                  grow={true}
                >
                  <p>
                    custom status check description
                  </p>
                </EuiText>
              </EuiFlexItem>
              <EuiFlexItem
                component="div"
                grow={false}
              >
                <EuiButton
                  color="primary"
                  fill={false}
                  iconSide="left"
                  isLoading={false}
                  onClick={[Function]}
                  type="button"
                >
                  custom btn label
                </EuiButton>
              </EuiFlexItem>
            </EuiFlexGroup>
            <EuiSpacer
              size="s"
            />
            <EuiCallOut
              color="success"
              size="m"
              title="custom success msg"
            />
          </UNDEFINED>,
          "key": "checkStatusStep",
          "status": "complete",
          "title": "custom title",
        },
      ]
    }
  />
</div>
`;
